# IDCBS-Adapter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agents_loader.cpp  agents_loader.h  map_loader.cpp  map_loader.h
example/: idcbs_adapter.cpp  idcbs_adapter.h
